[gd_scene load_steps=7 format=3 uid="uid://bnkxdudccj763"]

[ext_resource type="Theme" uid="uid://cq4trsewtksxu" path="res://theme/Font.tres" id="1_1ch2u"]
[ext_resource type="Texture2D" uid="uid://cproxhccob85g" path="res://assets/sprites/Players/Player_1.png" id="1_58vsc"]
[ext_resource type="Script" uid="uid://bfkjo56wr1rfy" path="res://scripts/show_player_card.gd" id="1_l2c0f"]

[sub_resource type="Animation" id="Animation_l2c0f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/HBoxContainer/PanelContainer/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_1ch2u"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/HBoxContainer/PanelContainer/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.2, 1), Vector2(1.3, 1.3), Vector2(1.2, 1), Vector2(1.3, 1.3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4548s"]
_data = {
&"RESET": SubResource("Animation_l2c0f"),
&"idle": SubResource("Animation_1ch2u")
}

[node name="show_player_card" type="Control"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 300.0
script = ExtResource("1_l2c0f")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1ch2u")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/HBoxContainer/PanelContainer"]
position = Vector2(100, 150)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_58vsc")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="name_ct" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/name_ct"]
layout_mode = 2
text = "姓名:"

[node name="_name" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/name_ct"]
layout_mode = 2
text = "1111"

[node name="health" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/health"]
layout_mode = 2
text = "生命值:"

[node name="health" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/health"]
layout_mode = 2
text = "1111"

[node name="attack_power" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/attack_power"]
layout_mode = 2
text = "战斗力:"

[node name="ap" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/attack_power"]
layout_mode = 2
text = "1111"

[node name="crit_rate" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/crit_rate"]
layout_mode = 2
text = "暴击率:"

[node name="crit_rate" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/crit_rate"]
layout_mode = 2
text = "1111"

[node name="speed" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/speed"]
layout_mode = 2
text = "速度:"

[node name="speed" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/speed"]
layout_mode = 2
text = "1111"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4548s")
}
autoplay = "idle"
